admin profile pt 2

--- a/OneListApplication/OneListApplication/OneListApplication.csproj
+++ b/OneListApplication/OneListApplication/OneListApplication.csproj
@@ -150,6 +150,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Business Logic\CookieHelper.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ListController.cs" />
     <Compile Include="Controllers\ProfileController.cs" />
@@ -189,6 +191,12 @@
     <Content Include="Views\Profile\Index.cshtml" />
     <Content Include="Views\Profile\ChangePassword.cshtml" />
     <Content Include="Views\Profile\Edit.cshtml" />
+    <Content Include="Views\Admin\Index.cshtml" />
+    <Content Include="Views\List\CreateList.cshtml" />
+    <Content Include="Views\List\ShowCompleteList.cshtml" />
+    <Content Include="Views\List\ShowListDetails.cshtml" />
+    <Content Include="Views\List\ShowSubscribedList.cshtml" />
+    <Content Include="Views\Home\_SidebarAdmin.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -199,7 +207,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
-    <Folder Include="Views\List\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
