Add subscriber pages

--- a/OneListApplication/OneListApplication/OneListApplication.csproj
+++ b/OneListApplication/OneListApplication/OneListApplication.csproj
@@ -153,6 +153,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ListController.cs" />
     <Compile Include="Controllers\ProfileController.cs" />
+    <Compile Include="Controllers\SubscriberController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -189,6 +190,15 @@
     <Content Include="Views\Profile\Index.cshtml" />
     <Content Include="Views\Profile\ChangePassword.cshtml" />
     <Content Include="Views\Profile\Edit.cshtml" />
+    <Content Include="Views\List\CreateList.cshtml" />
+    <Content Include="Views\List\ShowCompleteList.cshtml" />
+    <Content Include="Views\List\ShowListDetails.cshtml" />
+    <Content Include="Views\List\ShowSubscribedList.cshtml" />
+    <Content Include="Views\Home\SubscriberManagement.cshtml" />
+    <Content Include="Views\Subscriber\SubscriberTab.cshtml" />
+    <Content Include="Views\Subscriber\SubGroupDetails.cshtml" />
+    <Content Include="Views\Subscriber\EditSubGroup.cshtml" />
+    <Content Include="Views\Subscriber\AddSubscriber.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -199,7 +209,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
-    <Folder Include="Views\List\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
