added all subscriber pages

--- a/OneListApplication/OneListApplication/OneListApplication.csproj
+++ b/OneListApplication/OneListApplication/OneListApplication.csproj
@@ -156,6 +156,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ListController.cs" />
     <Compile Include="Controllers\ProfileController.cs" />
+    <Compile Include="Controllers\SubscriberController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -199,6 +200,11 @@
     <Content Include="Views\List\ShowSubscribedList.cshtml" />
     <Content Include="Views\Home\_SidebarAdmin.cshtml" />
     <None Include="Properties\PublishProfiles\onelistca - Web Deploy.pubxml" />
+    <Content Include="Views\Subscriber\AddSubscriber.cshtml" />
+    <Content Include="Views\Subscriber\EditSubGroup.cshtml" />
+    <Content Include="Views\Subscriber\SubGroupDetails.cshtml" />
+    <Content Include="Views\Subscriber\SubscriberTab.cshtml" />
+    <Content Include="Views\Home\SubscriberManagement.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
