--- a/OneListApplication/OneListApplication/OneListApplication.csproj
+++ b/OneListApplication/OneListApplication/OneListApplication.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Controllers\ItemController.cs" />
     <Compile Include="Controllers\ListController.cs" />
     <Compile Include="Controllers\ProfileController.cs" />
+    <Compile Include="Controllers\SubscriberController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -194,6 +195,21 @@
     <Content Include="Views\Profile\Index.cshtml" />
     <Content Include="Views\Profile\ChangePassword.cshtml" />
     <Content Include="Views\Profile\Edit.cshtml" />
+    <Content Include="Views\Admin\Index.cshtml" />
+    <Content Include="Views\Item\CreateItem.cshtml" />
+    <Content Include="Views\Item\CreateItemGroup.cshtml" />
+    <Content Include="Views\Item\ItemGroupManagement.cshtml" />
+    <Content Include="Views\Item\ItemManagement.cshtml" />
+    <Content Include="Views\List\CreateList.cshtml" />
+    <Content Include="Views\List\ShowCompleteList.cshtml" />
+    <Content Include="Views\List\ShowListDetails.cshtml" />
+    <Content Include="Views\List\ShowSubscribedList.cshtml" />
+    <Content Include="Views\Subscriber\AddSubscriber.cshtml" />
+    <Content Include="Views\Subscriber\EditSubGroup.cshtml" />
+    <Content Include="Views\Subscriber\SubGroupDetails.cshtml" />
+    <Content Include="Views\Subscriber\SubscriberTab.cshtml" />
+    <Content Include="Views\Item\ItemDetail.cshtml" />
+    <Content Include="Views\Item\ItemGroupDetail.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
