--- a/OneListApplication/OneListApplication/Web.config
+++ b/OneListApplication/OneListApplication/Web.config
@@ -8,6 +8,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=DESKTOP-NOCU4I8\SQLEXPRESS;Initial Catalog=OneListCA;Integrated Security=True" providerName="System.Data.SqlClient" />
+  <add name="OneListCAEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-NOCU4I8\SQLEXPRESS;initial catalog=OneListCA;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -51,9 +54,6 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
   </system.webServer>
-  <connectionStrings>
-    <add name="OneListCAEntities" connectionString="metadata=res://*/OneList.csdl|res://*/OneList.ssdl|res://*/OneList.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DTC01L0382-16;initial catalog=OneListCA;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
