webAPI Service version 1

--- a/OneListApplication/OneListApplication/Web.config
+++ b/OneListApplication/OneListApplication/Web.config
@@ -50,10 +50,12 @@
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
-  </system.webServer>
-  <connectionStrings>
-    <add name="OneListCAEntities" connectionString="metadata=res://*/OneList.csdl|res://*/OneList.ssdl|res://*/OneList.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DTC01L0382-16;initial catalog=OneListCA;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers></system.webServer>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -64,4 +66,4 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-</configuration>
+<connectionStrings><add name="OneListCAEntities" connectionString="metadata=res://*/OneList.csdl|res://*/OneList.ssdl|res://*/OneList.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DTC01L0382-16;initial catalog=OneListCA;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
