--- a/OneListApplication/OneListApplication/OneListApplication.csproj
+++ b/OneListApplication/OneListApplication/OneListApplication.csproj
@@ -224,12 +224,24 @@
       <DependentUpon>OneList.edmx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+    <Compile Include="Repositories\ItemRepo.cs" />
     <Compile Include="User.cs">
       <DependentUpon>OneList.tt</DependentUpon>
     </Compile>
     <Compile Include="UserType.cs">
       <DependentUpon>OneList.tt</DependentUpon>
     </Compile>
+    <Compile Include="ViewModels\ItemVM.cs" />
+    <Compile Include="ViewModels\ItemCategoryVM.cs" />
+    <Compile Include="ViewModels\ListItemVM.cs" />
+    <Compile Include="ViewModels\ListStatusVM.cs" />
+    <Compile Include="ViewModels\ListTypeVM.cs" />
+    <Compile Include="ViewModels\ListVM.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -260,10 +272,8 @@
     <Content Include="Views\Profile\ChangePassword.cshtml" />
     <Content Include="Views\Profile\Edit.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
-    <Content Include="Views\Item\CreateItem.cshtml" />
     <Content Include="Views\Item\CreateItemGroup.cshtml" />
     <Content Include="Views\Item\ItemGroupManagement.cshtml" />
-    <Content Include="Views\Item\ItemManagement.cshtml" />
     <Content Include="Views\List\CreateList.cshtml" />
     <Content Include="Views\List\ShowCompleteList.cshtml" />
     <Content Include="Views\List\ShowListDetails.cshtml" />
@@ -272,7 +282,6 @@
     <Content Include="Views\Subscriber\EditSubGroup.cshtml" />
     <Content Include="Views\Subscriber\SubGroupDetails.cshtml" />
     <Content Include="Views\Subscriber\SubscriberTab.cshtml" />
-    <Content Include="Views\Item\ItemDetail.cshtml" />
     <Content Include="Views\Item\ItemGroupDetail.cshtml" />
     <Content Include="Views\List\EditList.cshtml" />
     <Content Include="Views\Home\SubscriberManagement.cshtml" />
@@ -288,6 +297,15 @@
     <None Include="Properties\PublishProfiles\takethisapart.com - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\takethisapart.com - Web Deploy.pubxml" />
     <Content Include="Views\Home\GetDesignDocument.cshtml" />
+    <Content Include="Views\Item\CreateItem.cshtml" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <Content Include="Views\Item\ItemManagement.cshtml" />
+    <Content Include="Views\Item\ItemDetail.cshtml" />
+    <Content Include="Views\Item\EditItem.cshtml" />
+    <Content Include="Views\Item\_ItemPageTopNav.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -297,6 +315,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="Views\Item\old\" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
