--- a/OneListApplication/OneListApplication/OneListApplication.csproj
+++ b/OneListApplication/OneListApplication/OneListApplication.csproj
@@ -204,6 +204,16 @@
       <DependentUpon>Model1.edmx</DependentUpon>
       <LastGenOutput>Model1.cs</LastGenOutput>
     </Content>
+    <Content Include="OneListCA.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>OneListCA.edmx</DependentUpon>
+      <LastGenOutput>OneListCA.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="OneListCA.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>OneListCA.edmx</DependentUpon>
+      <LastGenOutput>OneListCA.cs</LastGenOutput>
+    </Content>
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.1.1.min.js" />
@@ -223,16 +233,16 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="AspNetRole.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>OneListCA.tt</DependentUpon>
     </Compile>
     <Compile Include="AspNetUser.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>OneListCA.tt</DependentUpon>
     </Compile>
     <Compile Include="AspNetUserClaim.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>OneListCA.tt</DependentUpon>
     </Compile>
     <Compile Include="AspNetUserLogin.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>OneListCA.tt</DependentUpon>
     </Compile>
     <Compile Include="Business Logic\CookieHelper.cs" />
     <Compile Include="Controllers\AdminController.cs" />
@@ -242,34 +252,34 @@
     <Compile Include="Controllers\ProfileController.cs" />
     <Compile Include="Controllers\SubscriberController.cs" />
     <Compile Include="Coupon.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>OneListCA.tt</DependentUpon>
     </Compile>
     <Compile Include="C__MigrationHistory.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>OneListCA.tt</DependentUpon>
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Item.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>OneListCA.tt</DependentUpon>
     </Compile>
     <Compile Include="ItemCategory.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>OneListCA.tt</DependentUpon>
     </Compile>
     <Compile Include="List.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>OneListCA.tt</DependentUpon>
     </Compile>
     <Compile Include="ListItem.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>OneListCA.tt</DependentUpon>
     </Compile>
     <Compile Include="ListStatu.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>OneListCA.tt</DependentUpon>
     </Compile>
     <Compile Include="ListType.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>OneListCA.tt</DependentUpon>
     </Compile>
     <Compile Include="ListUser.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>OneListCA.tt</DependentUpon>
     </Compile>
     <Compile Include="Model1.Context.cs">
       <AutoGen>True</AutoGen>
@@ -290,6 +300,21 @@
     <Compile Include="Models\RegisteredUserVM.cs" />
     <Compile Include="Models\RoleVM.cs" />
     <Compile Include="Models\UserRoleVM.cs" />
+    <Compile Include="OneListCA.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>OneListCA.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="OneListCA.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>OneListCA.tt</DependentUpon>
+    </Compile>
+    <Compile Include="OneListCA.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>OneListCA.edmx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -298,15 +323,15 @@
     </Compile>
     <Compile Include="Repositories\ItemRepo.cs" />
     <Compile Include="Retail.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>OneListCA.tt</DependentUpon>
     </Compile>
     <Compile Include="Service\SandGrid.cs" />
     <Compile Include="Startup1.cs" />
     <Compile Include="User.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>OneListCA.tt</DependentUpon>
     </Compile>
     <Compile Include="UserType.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>OneListCA.tt</DependentUpon>
     </Compile>
     <Compile Include="ViewModels\ItemCategoryVM.cs" />
     <Compile Include="ViewModels\ItemVM.cs" />
@@ -367,6 +392,13 @@
     </EntityDeploy>
     <Content Include="Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
+    </Content>
+    <EntityDeploy Include="OneListCA.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>OneListCA.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="OneListCA.edmx.diagram">
+      <DependentUpon>OneListCA.edmx</DependentUpon>
     </Content>
     <None Include="Properties\PublishProfiles\OneList.pubxml" />
     <None Include="Properties\PublishProfiles\takethisapart.com - FTP.pubxml" />
