Updated All ItemRepo functions(Edit/Details/List)

--- a/OneListApplication/OneListApplication/OneListApplication.csproj
+++ b/OneListApplication/OneListApplication/OneListApplication.csproj
@@ -381,7 +381,6 @@
     <Content Include="Views\Profile\ChangePassword.cshtml" />
     <Content Include="Views\Profile\Edit.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
-    <Content Include="Views\Item\old\CreateItem.cshtml" />
     <Content Include="Views\Item\CreateItemGroup.cshtml" />
     <Content Include="Views\Item\ItemGroupManagement.cshtml" />
     <Content Include="Views\Item\ItemManagement.cshtml" />
@@ -429,6 +428,8 @@
     <Content Include="Views\Home\AddUserToRole.cshtml" />
     <Content Include="Views\Home\AdminOnly.cshtml" />
     <Content Include="Views\Item\CreateItem.cshtml" />
+    <Content Include="Views\Item\old\EditItem.cshtml" />
+    <Content Include="Views\Item\EditItem.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
