Updated Item controller and repo so results is relevant to specific user

--- a/OneListApplication/OneListApplication/OneListApplication.csproj
+++ b/OneListApplication/OneListApplication/OneListApplication.csproj
@@ -433,6 +433,7 @@
     <Content Include="Views\Item\CreateItem.cshtml" />
     <Content Include="Views\Item\old\EditItem.cshtml" />
     <Content Include="Views\Item\EditItem.cshtml" />
+    <Content Include="Views\Item\_ItemPageTopNav.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
