--- a/OneListApplication/OneListApplication/Web.config
+++ b/OneListApplication/OneListApplication/Web.config
@@ -53,6 +53,11 @@
     </compilers>
   </system.codedom>
   <system.webServer>
+    <httpProtocol>
+      <customHeaders>
+       <add name="Access-Control-Allow-Origin" value="*" />
+      </customHeaders>
+ </httpProtocol>
     <validation validateIntegratedModeConfiguration="false" />
     <modules>
       <remove name="ApplicationInsightsWebTracking" />
