--- a/OneListApplication/OneListApplication/Properties/Settings.settings
+++ b/OneListApplication/OneListApplication/Properties/Settings.settings
@@ -10,5 +10,8 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=DESKTOP-NOCU4I8\SQLEXPRESS;Initial Catalog=OneListCA;Integrated Security=True</Value>
     </Setting>
+    <Setting Name="LastBuildtime" Type="System.DateTime" Scope="Application">
+      <Value Profile="(Default)">02/28/2017 11:10:00</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
