--- a/OneListApplication/OneListApplication/Web.config
+++ b/OneListApplication/OneListApplication/Web.config
@@ -7,20 +7,13 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="OneListApplication.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=tcp:s11.winhost.com;Initial Catalog=DB_110660_onelistca;User ID=DB_110660_onelistca_user;Password=123456Max!;Integrated Security=False;"
-      providerName="System.Data.SqlClient" />
-    <add name="OneListCAEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:s11.winhost.com;initial catalog=DB_110660_onelistca;persist security info=True;user id=DB_110660_onelistca_user;password=123456Max!;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
-    <add name="OneListEntitiesCore" connectionString="metadata=res://*/OneListCA.csdl|res://*/OneListCA.ssdl|res://*/OneListCA.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:s11.winhost.com;initial catalog=DB_110660_onelistca;user id=DB_110660_onelistca_user;password=123456Max!;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
-    <add name="OneListApplication.Properties.Settings.Setting" connectionString="Data Source=DESKTOP-NOCU4I8\SQLEXPRESS;Initial Catalog=OneListCA;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-  </connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=tcp:s11.winhost.com;Initial Catalog=DB_110660_onelistca;User ID=DB_110660_onelistca_user;Password=123456Max!;Integrated Security=False;" providerName="System.Data.SqlClient" /><add name="OneListApplication.Properties.Settings.Setting" connectionString="Data Source=DESKTOP-NOCU4I8\SQLEXPRESS;Initial Catalog=OneListCA;Integrated Security=True" providerName="System.Data.SqlClient" />
+  <add name="OneListCAEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:s11.winhost.com;initial catalog=DB_110660_onelistca;user id=DB_110660_onelistca_user;password=123456Max!;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="OneListEntitiesCore" connectionString="metadata=res://*/OneListCA.csdl|res://*/OneListCA.ssdl|res://*/OneListCA.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:s11.winhost.com;initial catalog=DB_110660_onelistca;user id=DB_110660_onelistca_user;password=123456Max!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
